--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: "3"
+version: '3'
 
 services:
   app:
     build: .
-    container_name: nodejs-typescript-environment
+    container_name: clean-arch-nestjs-environment
     volumes:
       - .:/home/node/app
     ports:
-      - "8229:9229"
+      - '8229:9229'
