chore: add initial project configuration
This commit adds the initial project configuration, including configuration files,
documentation, dependencies, and a basic directory structure.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-docker-compose
 {
-  "name": "clean-arch-nestjs-environment",
+  "name": "project-name",
 
   // Update the 'dockerComposeFile' list if you have more compose files or use different names.
   // The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
@@ -32,7 +32,7 @@
   // "shutdownAction": "none",
 
   // Uncomment the next line to run commands after the container is created.
-  "postCreateCommand": "npm i && npx husky install",
+  // "postCreateCommand": "npm run start:dev",
 
   // Configure tool-specific properties.
   "customizations": {
