--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,10 @@ version: '3'
 services:
   app:
     build: .
-    container_name: clean-arch-nestjs-environment
+    container_name: project-name
+    entrypoint: .docker/start-dev.sh
     volumes:
       - .:/home/node/app
     ports:
       - '8229:9229'
+      - '3000:3000'
